Bug Fixed UI remained

--- a/templates/error.html
+++ b/templates/error.html
@@ -1,8 +1,7 @@
 {% extends 'layout.html' %}
 {% block body %}
 <p>
-    Whoops! Something went wrong :(. Let us know what happened:
-    <a href="mailto:admin@example.com">send email</a>.
+    Whoops! Something went wrong .
 </p>
 
 {% endblock %}
